# ssr-chatbots

./: .gitignore  README.md
marvin-golang/: Makefile  README.md  go.mod  go.sum  main.go
marvin-golang/app/: main.go
marvin-golang/cmd/chatbot/: main.go
marvin-golang/templates/: index.gohtml
marvin-python/: .gitignore  Makefile  README.md  main.py  pyproject.toml
marvin-python/app/: main.py
marvin-python/static/: index.css
marvin-python/templates/: chat-human.html.j2  chat-input.html.j2  chat-output.html.j2  index.html.j2
shared/: assets.go
static/: assets.prod.go  index.css  index.js
